// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test workarea should render correctly 1`] = `
<div>
  <div
    class="ant-dropdown-trigger mac"
    id="workarea"
  >
    <div
      id="svgcanvas"
      style="position: relative;"
    />
  </div>
</div>
`;

exports[`test workarea should render correctly 2`] = `
<div>
  <div
    class="ant-dropdown-trigger mac"
    disabled=""
    id="workarea"
  >
    <div
      id="svgcanvas"
      style="position: relative;"
    />
  </div>
</div>
`;
